--- a/sample/ApiSamples/ApiSamples.csproj
+++ b/sample/ApiSamples/ApiSamples.csproj
@@ -9,8 +9,15 @@
     <ProjectReference Include="..\..\src\Elastic.Apm\Elastic.Apm.csproj" />
   </ItemGroup>
 
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net5.0' ">
+    <PackageReference Include="OpenTelemetry.Api" Version="1.1.0-rc1" />
+    <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="5.0.1" />
+  </ItemGroup>
+
   <!--  Only to test https://github.com/elastic/apm-agent-dotnet/issues/884-->
   <ItemGroup Condition=" '$(TargetFramework)' == 'netcoreapp3.0' ">
     <ProjectReference Include="..\..\src\Elastic.Apm.EntityFrameworkCore\Elastic.Apm.EntityFrameworkCore.csproj" />
   </ItemGroup>
+
+
 </Project>
