--- a/.ci/jobs/defaults.yml
+++ b/.ci/jobs/defaults.yml
@@ -29,6 +29,7 @@
         repo: apm-agent-dotnet
         repo-owner: elastic
         credentials-id: 2a9602aa-ab9f-4e52-baf3-b71ca88469c7-UserAndToken
+        head-filter-regex: '^(master|PR-.*|[1-9]\.[1-9]{1,3})$'
         ssh-checkout:
           credentials: f6c7695a-671e-4f4f-a331-acdce44ff9ba
         build-strategies:
