Autoinstrumentation profiler tests for Npgsql

--- a/test/Elastic.Apm.Tests.MockApmServer/Elastic.Apm.Tests.MockApmServer.csproj
+++ b/test/Elastic.Apm.Tests.MockApmServer/Elastic.Apm.Tests.MockApmServer.csproj
@@ -10,6 +10,7 @@
     <InternalsVisibleTo Include="Elastic.Apm.AspNetFullFramework.Tests" Key="$(ExposedPublicKey)" />
     <InternalsVisibleTo Include="Elastic.Apm.StartupHook.Tests" Key="$(ExposedPublicKey)" />
     <InternalsVisibleTo Include="Elastic.Apm.Tests" Key="$(ExposedPublicKey)" />
+    <InternalsVisibleTo Include="Elastic.Apm.Profiler.Managed.Tests" Key="$(ExposedPublicKey)" />
   </ItemGroup>
   
   <ItemGroup>
