--- a/src/Elastic.Apm.Profiler.Managed/Elastic.Apm.Profiler.Managed.csproj
+++ b/src/Elastic.Apm.Profiler.Managed/Elastic.Apm.Profiler.Managed.csproj
@@ -1,12 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>net461;netstandard2.0</TargetFrameworks>
+        <TargetFrameworks>net461;netstandard2.0;netcoreapp3.1</TargetFrameworks>
     </PropertyGroup>
     
     <ItemGroup>
-        <PackageReference Condition="'$(TargetFramework)' == 'netstandard2.0'" Include="System.Reflection.Emit" Version="4.3.0" />
-        <PackageReference Condition="'$(TargetFramework)' == 'netstandard2.0'" Include="System.Reflection.Emit.Lightweight" Version="4.3.0" />
+        <PackageReference Condition="'$(TargetFramework)' != 'net461'" Include="System.Reflection.Emit" Version="4.3.0" />
+        <PackageReference Condition="'$(TargetFramework)' != 'net461'" Include="System.Reflection.Emit.Lightweight" Version="4.3.0" />
     </ItemGroup>
 
     <ItemGroup>
