--- a/test/Elastic.Apm.Profiler.Managed.Tests/Elastic.Apm.Profiler.Managed.Tests.csproj
+++ b/test/Elastic.Apm.Profiler.Managed.Tests/Elastic.Apm.Profiler.Managed.Tests.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Oracle.ManagedDataAccess.Core" Version="2.19.120" />
       <PackageReference Include="Proc" Version="0.6.2" />
       <PackageReference Include="Testcontainers" Version="0.0.2.107" />
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
