Generate integrations file from available integrations (#12)
This commit introduces an executable to generate an integrations file
from a managed assembly containing integrations.

Integrations are identified by an InstrumentAttribute, which are applied to
classes containing the Begin* and End* static methods that are inserted
into rewritten IL. The executable harvests all attributed types and generates
either a JSON or YML file containing the integrations. The profiler can
accept integrations specified in either yaml or json.

The InstrumentAttribute is specified in a separate
Elastic.Apm.Profiler.Managed.Core assembly, the intention being that in
future, this could be used by users to write their own managed instrumentations
assembly, generate an integrations file from them, and have the profiler call them,
similar to the Java agent's trace methods.

Closes #11

--- a/src/Elastic.Apm.Profiler.Managed/Elastic.Apm.Profiler.Managed.csproj
+++ b/src/Elastic.Apm.Profiler.Managed/Elastic.Apm.Profiler.Managed.csproj
@@ -10,6 +10,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Elastic.Apm.Profiler.Managed.Core\Elastic.Apm.Profiler.Managed.Core.csproj" />
       <ProjectReference Include="..\Elastic.Apm\Elastic.Apm.csproj" />
     </ItemGroup>
     
