--- a/Makefile.toml
+++ b/Makefile.toml
@@ -7,34 +7,58 @@ DOTNET_CONFIG = "Debug"
 CORECLR_ENABLE_PROFILING = { value = "1", condition = { env_not_set = ["CORECLR_ENABLE_PROFILING"] } }
 CORECLR_PROFILER = { value = "{FA65FE15-F085-4681-9B20-95E04F6C03CC}", condition = { env_not_set = ["CORECLR_PROFILER"] } }
 ELASTIC_APM_PROFILER_HOME = { value = "${CARGO_MAKE_WORKING_DIRECTORY}/src/Elastic.Apm.Profiler.Managed/bin/Release", condition = { env_not_set = ["ELASTIC_APM_PROFILER_HOME"] } }
-ELASTIC_APM_PROFILER_INTEGRATIONS = { value = "${CARGO_MAKE_WORKING_DIRECTORY}/src/Elastic.Apm.Profiler.Managed/integrations.json", condition = { env_not_set = ["ELASTIC_APM_PROFILER_INTEGRATIONS"] } }
+ELASTIC_APM_PROFILER_INTEGRATIONS = { value = "${CARGO_MAKE_WORKING_DIRECTORY}/src/Elastic.Apm.Profiler.Managed/integrations.yml", condition = { env_not_set = ["ELASTIC_APM_PROFILER_INTEGRATIONS"] } }
 ELASTIC_APM_PROFILER_CALLTARGET_ENABLED = { value = "true", condition = { env_not_set = ["ELASTIC_APM_PROFILER_CALLTARGET_ENABLED"] } }
 ELASTIC_APM_PROFILER_LOG = { value = "debug", condition = { env_not_set = ["ELASTIC_APM_PROFILER_LOG"] } }
 ELASTIC_APM_PROFILER_LOG_IL = { value = "true", condition = { env_not_set = ["ELASTIC_APM_PROFILER_LOG_IL"] } }
 
-[tasks.build-profiler]
-description = "Builds CLR Profiler"
-command = "cargo"
-args = ["build", "-p", "elastic_apm_profiler"]
-
-[tasks.build-dotnet]
-description = "Builds .NET project to instrument"
-command = "dotnet"
-args = ["build", "-c", "${DOTNET_CONFIG}", "./sample/Example/Example.csproj"]
-
 [tasks.build-loader]
-description = "Builds .NET loader"
+description = "Builds Managed Profiler .NET loader"
 command = "dotnet"
 args = ["build", "-c", "Release", "./src/Elastic.Apm.Profiler.Managed.Loader/Elastic.Apm.Profiler.Managed.Loader.csproj"]
 
+[tasks.build]
+description = "Builds CLR Profiler"
+# loader assembly is embedded in the profiler
+dependencies = ["build-loader"]
+
 [tasks.build-integrations]
-description = "Builds .NET integrations"
+description = "Builds Managed Profiler .NET integrations"
 command = "dotnet"
 args = ["build", "-c", "Release", "./src/Elastic.Apm.Profiler.Managed/Elastic.Apm.Profiler.Managed.csproj"]
 
-[tasks.build]
-clear = true
-dependencies = ["build-loader", "build-integrations", "build-profiler", "build-dotnet"]
+[tasks.build-example]
+description = "Builds Example .NET project to instrument"
+command = "dotnet"
+args = ["build", "-c", "${DOTNET_CONFIG}", "./sample/Example/Example.csproj"]
+
+[tasks.generate-integrations]
+description = "Generates integrations files from Managed Profiler assembly"
+dependencies = ["generate-integrations-json", "generate-integrations-yml"]
+
+[tasks.generate-integrations-json]
+description = "Generates integrations.json file"
+command = "dotnet"
+args = [
+    "run",
+    "--project", "./src/Elastic.Apm.Profiler.IntegrationsGenerator/Elastic.Apm.Profiler.IntegrationsGenerator.csproj",
+    "--",
+    "-i", "./src/Elastic.Apm.Profiler.Managed/bin/Release/netstandard2.0/Elastic.Apm.Profiler.Managed.dll",
+    "-o", "./src/Elastic.Apm.Profiler.Managed",
+    "-f", "json"]
+dependencies = ["build-integrations"]
+
+[tasks.generate-integrations-yml]
+description = "Generates integrations.json file"
+command = "dotnet"
+args = [
+    "run",
+    "--project", "./src/Elastic.Apm.Profiler.IntegrationsGenerator/Elastic.Apm.Profiler.IntegrationsGenerator.csproj",
+    "--",
+    "-i", "./src/Elastic.Apm.Profiler.Managed/bin/Release/netstandard2.0/Elastic.Apm.Profiler.Managed.dll",
+    "-o", "./src/Elastic.Apm.Profiler.Managed",
+    "-f", "yml"]
+dependencies = ["build-integrations"]
 
 [tasks.expand]
 clear = true
@@ -43,6 +67,7 @@ cargo expand --manifest-path src/elastic_apm_profiler/Cargo.toml --color never >
 '''
 
 [tasks.set-profiler-env]
+private = true
 env = { "CORECLR_PROFILER_PATH" = "${CARGO_MAKE_WORKING_DIRECTORY}/target/debug/libelastic_apm_profiler.so" }
 run_task = "run-dotnet"
 
@@ -56,6 +81,9 @@ env = { "CORECLR_PROFILER_PATH" = "${CARGO_MAKE_WORKING_DIRECTORY}\\target\\debu
 command = "dotnet"
 args = ["${CARGO_MAKE_WORKING_DIRECTORY}/sample/Example/bin/${DOTNET_CONFIG}/${DOTNET_VERSION}/Example.dll"]
 
-[tasks.test-sample]
+[tasks.test]
+dependencies = ["generate-integrations"]
+
+[tasks.test-example]
 clear = true
-dependencies = ["build", "set-profiler-env"]
+dependencies = ["build", "build-integrations", "build-example", "set-profiler-env"]
