--- a/src/elastic_apm_profiler/Cargo.toml
+++ b/src/elastic_apm_profiler/Cargo.toml
@@ -21,6 +21,7 @@ rust-crypto = "^0.2"
 rust-embed = { version = "5.9.0", features = ["compression", "debug-embed"] }
 serde = { version = "1.0.126", features = ["derive"] }
 serde_json = "1.0.64"
+serde_yaml = "0.8.17"
 simple_logger = "1.11.0"
 widestring = "0.4.2"
 
