--- a/src/elastic_apm_profiler/Cargo.toml
+++ b/src/elastic_apm_profiler/Cargo.toml
@@ -14,6 +14,7 @@ c_vec = "2.0.0"
 com = { git = "https://github.com/russcam/com-rs.git", branch = "master", features = ["production"] }
 hex = "0.4.3"
 log = "0.4.14"
+log4rs = { version = "1.0.0", default_features = false, features = ["console_appender", "rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
 num-derive = "0.3"
 num-traits = "0.2"
 once_cell = "1.8.0"
@@ -22,7 +23,6 @@ rust-embed = { version = "5.9.0", features = ["compression", "debug-embed"] }
 serde = { version = "1.0.126", features = ["derive"] }
 serde_json = "1.0.64"
 serde_yaml = "0.8.17"
-simple_logger = "1.11.0"
 widestring = "0.4.2"
 
 [lib]
