Support SqlCommand SQL server auto instrumentation (#21)
* Auto instrument SqlCommand and System.Data DbCommand
* Update original method ret instructions in reverse order

Allows calculating replacement leave instruction offset on replacement.

--- a/Makefile.toml
+++ b/Makefile.toml
@@ -93,4 +93,4 @@ dependencies = ["generate-integrations"]
 
 [tasks.test-example]
 clear = true
-dependencies = ["build-release", "build-integrations", "build-example", "run-dotnet"]
+dependencies = ["build-release", "generate-integrations", "build-example", "run-dotnet"]
