--- a/src/Elastic.Apm.Profiler.Managed/Elastic.Apm.Profiler.Managed.csproj
+++ b/src/Elastic.Apm.Profiler.Managed/Elastic.Apm.Profiler.Managed.csproj
@@ -4,14 +4,22 @@
         <TargetFrameworks>net461;netstandard2.0;netcoreapp3.1</TargetFrameworks>
     </PropertyGroup>
     
-    <ItemGroup>
-        <PackageReference Condition="'$(TargetFramework)' != 'net461'" Include="System.Reflection.Emit" Version="4.3.0" />
-        <PackageReference Condition="'$(TargetFramework)' != 'net461'" Include="System.Reflection.Emit.Lightweight" Version="4.3.0" />
+    <ItemGroup Condition="'$(TargetFramework)' != 'net461'">
+        <PackageReference Include="System.Reflection.Emit" Version="4.3.0" />
+        <PackageReference Include="System.Reflection.Emit.Lightweight" Version="4.3.0" />
+    </ItemGroup>
+  
+    <!-- ASP.NET integration -->
+    <ItemGroup Condition="'$(TargetFramework)' == 'net461'">
+      <ProjectReference Include="..\Elastic.Apm.AspNetFullFramework\Elastic.Apm.AspNetFullFramework.csproj" />
+      <Reference Include="System.Web" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Elastic.Apm.Profiler.Managed.Core\Elastic.Apm.Profiler.Managed.Core.csproj" />
       <ProjectReference Include="..\Elastic.Apm\Elastic.Apm.csproj" />
     </ItemGroup>
+  
+
     
 </Project>
