--- a/test/Elastic.Apm.StartupHook.Tests/Elastic.Apm.StartupHook.Tests.csproj
+++ b/test/Elastic.Apm.StartupHook.Tests/Elastic.Apm.StartupHook.Tests.csproj
@@ -1,11 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp2.1</TargetFramework>
+        <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.AspNetCore.App" />
       <PackageReference Include="Proc" Version="0.6.2" />
       <PackageReference Include="FluentAssertions" Version="5.6.0" />
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
