Log managed integrations to separate log file (#44)
This commit changes the logging for managed integrations to log to
a log file in the profiler log directory. Previously, managed integrations
used the agent logger, however, the agent singleton instance may not
be instantiated at the point a logger is needed e.g. when deferring
agent instantiation to the ElasticApmModule for ASP.NET integration.

--- a/test/Elastic.Apm.Profiler.Managed.Tests/Elastic.Apm.Profiler.Managed.Tests.csproj
+++ b/test/Elastic.Apm.Profiler.Managed.Tests/Elastic.Apm.Profiler.Managed.Tests.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
       <!-- needed because of MockApmServer version -->
-      <TargetFramework>netcoreapp2.1</TargetFramework>
+      <TargetFramework>net5.0</TargetFramework>
       <IsPackable>false</IsPackable>
       <!-- Don't run Roslyn analyzers as part of build. The StyleCop analyzers conflict with editorconfig -->
       <RunAnalyzersDuringBuild>false</RunAnalyzersDuringBuild>
@@ -21,7 +21,6 @@
         <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
       </PackageReference>
       <ProjectReference Include="..\Elastic.Apm.Tests.MockApmServer\Elastic.Apm.Tests.MockApmServer.csproj" />
-      <PackageReference Include="Microsoft.AspNetCore.App" />
       <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
     </ItemGroup>
 
