--- a/test/Elastic.Apm.Profiler.Managed.Tests/Elastic.Apm.Profiler.Managed.Tests.csproj
+++ b/test/Elastic.Apm.Profiler.Managed.Tests/Elastic.Apm.Profiler.Managed.Tests.csproj
@@ -13,6 +13,7 @@
     <ItemGroup>
       <PackageReference Include="Oracle.ManagedDataAccess.Core" Version="2.19.120" />
       <PackageReference Include="Proc" Version="0.6.2" />
+      <PackageReference Include="System.Data.SqlClient" Version="4.7.0" />
       <PackageReference Include="Testcontainers" Version="0.0.2.107" />
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
       <PackageReference Include="xunit" Version="2.4.1" />
@@ -20,6 +21,7 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
       </PackageReference>
+      <ProjectReference Include="..\..\src\Elastic.Apm.Profiler.Managed\Elastic.Apm.Profiler.Managed.csproj" />
       <ProjectReference Include="..\Elastic.Apm.Tests.MockApmServer\Elastic.Apm.Tests.MockApmServer.csproj" />
       <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
     </ItemGroup>
