run Profiler integration tests on CI (#36)
This commit runs the profiler integration tests in CI.

Those that use docker images run only on linux for now,
since windows build hosts cannot launch linux containers
at the moment.

Co-authored-by: Victor Martinez <VictorMartinezRubio@gmail.com>

--- a/.ci/docker/sdk-linux/Dockerfile
+++ b/.ci/docker/sdk-linux/Dockerfile
@@ -7,6 +7,8 @@ ENV PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:${DOTNET_R
 RUN curl -s -O -L https://dotnet.microsoft.com/download/dotnet-core/scripts/v1/dotnet-install.sh
 
 # Install .Net SDKs
+RUN /bin/bash ./dotnet-install.sh --install-dir "${DOTNET_ROOT}" -version "2.1.505"
+RUN /bin/bash ./dotnet-install.sh --install-dir "${DOTNET_ROOT}" -version "3.0.103"
 RUN /bin/bash ./dotnet-install.sh --install-dir "${DOTNET_ROOT}" -version "3.1.100"
 
 # Install docker
