--- a/test/Elastic.Apm.Profiler.Managed.Tests/Elastic.Apm.Profiler.Managed.Tests.csproj
+++ b/test/Elastic.Apm.Profiler.Managed.Tests/Elastic.Apm.Profiler.Managed.Tests.csproj
@@ -13,8 +13,9 @@
     <ItemGroup>
       <PackageReference Include="Oracle.ManagedDataAccess.Core" Version="2.19.120" />
       <PackageReference Include="Proc" Version="0.6.2" />
+      <PackageReference Include="DotNet.Testcontainers" Version="1.5.0" />
+      <PackageReference Include="StrongNamer" Version="0.2.5" />
       <PackageReference Include="System.Data.SqlClient" Version="4.7.0" />
-      <PackageReference Include="Testcontainers" Version="0.0.2.107" />
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
       <PackageReference Include="xunit" Version="2.4.1" />
       <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
