--- a/src/Elastic.Apm.Profiler.Managed.Core/Elastic.Apm.Profiler.Managed.Core.csproj
+++ b/src/Elastic.Apm.Profiler.Managed.Core/Elastic.Apm.Profiler.Managed.Core.csproj
@@ -2,6 +2,7 @@
 
     <PropertyGroup>
       <TargetFrameworks>net461;netstandard2.0;netcoreapp3.1</TargetFrameworks>
+      <IsPackable>false</IsPackable>
     </PropertyGroup>
 
 </Project>
