--- a/src/Elastic.Apm.Profiler.Managed/Elastic.Apm.Profiler.Managed.csproj
+++ b/src/Elastic.Apm.Profiler.Managed/Elastic.Apm.Profiler.Managed.csproj
@@ -1,12 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>net461;netstandard2.0;netcoreapp3.1</TargetFrameworks>
+      <TargetFrameworks>net461;netstandard2.0;netcoreapp3.1</TargetFrameworks>
+      <IsPackable>false</IsPackable>
     </PropertyGroup>
     
     <ItemGroup Condition="'$(TargetFramework)' != 'net461'">
-        <PackageReference Include="System.Reflection.Emit" Version="4.3.0" />
-        <PackageReference Include="System.Reflection.Emit.Lightweight" Version="4.3.0" />
+      <PackageReference Include="System.Reflection.Emit" Version="4.3.0" />
+      <PackageReference Include="System.Reflection.Emit.Lightweight" Version="4.3.0" />
     </ItemGroup>
   
     <!-- ASP.NET integration -->
