Prepare for 1.12.0 release

--- a/src/elastic_apm_profiler/Cargo.toml
+++ b/src/elastic_apm_profiler/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "elastic_apm_profiler"
-version = "1.11.1-alpha.2"
+version = "1.12.0-beta.1"
 edition = "2018"
 authors = ["Elastic and Contributors"]
 description = "Elastic APM .NET agent CLR profiler"
