--- a/src/Elastic.Apm.StackExchange.Redis/Elastic.Apm.StackExchange.Redis.csproj
+++ b/src/Elastic.Apm.StackExchange.Redis/Elastic.Apm.StackExchange.Redis.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="StackExchange.Redis" Version="[2.0.495,3.0)" />
+    <PackageReference Include="StackExchange.Redis" Version="2.0.495" />
   </ItemGroup>
 
 </Project>
